Fix the scrollbar

--- a/frontend/src/components/TaskView/FocusView/index.module.css
+++ b/frontend/src/components/TaskView/FocusView/index.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100% - 54px);
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
